Debugging: removed conflicting graphics settings, removed duplicate bib references, deleted commented out references from bib files, and corrected incorrect path names to figures

--- a/Book.bib
+++ b/Book.bib
@@ -8,8 +8,8 @@
 	month = apr,
 	year = {2012},
     url = {https://policy.defense.gov/Portals/11/Documents/MA_Strategy_Final_7May12.pdf},
-    note = {(Accessed on 22 Dec. 2025)}
-%	file = {PDF:C\:\\Users\\skchi\\Zotero\\storage\\KBAKCYME\\Department of Defense Mission Assurance Strategy.pdf:application/pdf},
+    note = {(Accessed on 22 Dec. 2025)},
+	file = {PDF:C\:\\Users\\skchi\\Zotero\\storage\\KBAKCYME\\Department of Defense Mission Assurance Strategy.pdf:application/pdf},
 }
 
 @misc{DoD3020-40-MA,
@@ -782,14 +782,6 @@
   volume = 	 1,
   number = 	 2}
 
-%@TechReport{NIST800-160,
-%  author = 	 {Ron Ross and Mark Winstead and Michael McEvilley},
-%  title = 	 {Engineering Trustworthy Secure Systems},
-%  institution =  {National Institute of Standards and Technology},
-%  year = 	 {2022},
-%  number = 	 {NIST SP 800-160v1r1},
-%  month = 	 {November}}
-
 @article{ISO15288,
     author    = {{International Organization for Standardization (ISO)} and {International Electrotechnical Commission (IEC)} and {Institute of Electrical and Electronics Engineers (IEEE)}},
 	title = {{ISO}/{IEC}/{IEEE} {International} {Standard} - {Systems} and software engineering–{System} life cycle processes},
@@ -1029,14 +1021,6 @@
   edition = 	 {NCSC-TG-010 Version-1},
   month = 	 {October},
   year = 	 1992}
-
-%@Manual{AI-RMF,
-%  title = 	 {Artificial Intelligence Risk Management Framework
-%                  (AI RMF 1.0)},
-%  organization = {National Institute of Standards and Technology},
-%  month = 	 {January},
-%  year = 	 2023,
-%  note = 	 {NIST AI 100-1}}
 
 @TechReport{ZTA,
   author = 	 {Scott Rose and Oliver Borchert and Stu Mitchell and
