--- a/Storm-AI-Deliverable-1.tex
+++ b/Storm-AI-Deliverable-1.tex
@@ -10,7 +10,7 @@
 %\usepackage[hyphens]{url}
 %\usepackage[numbers, sort&compress]{natbib}
 \usepackage[numbers]{natbib}
-\usepackage{hyperref}
+% \usepackage{hyperref}
 \usepackage{xurl}
 
 \usepackage[colorlinks=true, linkcolor=black, urlcolor=black, citecolor=black]{hyperref}
