--- a/chapter6_references.bib
+++ b/chapter6_references.bib
@@ -64,8 +64,7 @@
   pages={n71},
   year={2021},
   month={March},
-  doi={10.1136/bmj.n71},
-%  url={https://www.bmj.com/content/372/bmj.n160}
+  doi={10.1136/bmj.n71}
 }
 
 @article{sahoo2024systematic,
@@ -74,16 +73,6 @@
   journal={arXiv preprint arXiv:2402.07927},
   year={2024},
   month={February}
-}
-
-@article{dai2024accuracy,
-  title={Accuracy of Large Language Models for Literature Screening in Systematic Reviews and Meta-Analyses},
-  author={Dai, Zhang-Yi and Shen, Cheng and Ji, Yan-Li and Li, Zhi-Yang and Wang, Yun and Wang, Fu-Qiang},
-  journal={Available at SSRN},
-  year={2024},
-  url={https://ssrn.com/abstract=4943759},
-  note ={(Accessed on 22 Dec. 2025)}
-  doi={10.2139/ssrn.4943759}
 }
 
 @article{luo2024potential,
