--- a/execSummaryAlt.tex
+++ b/execSummaryAlt.tex
@@ -23,7 +23,7 @@ Only 9,183 AI papers out of 54,628 AI papers examined dealt with any aspect of A
 
 \begin{figure}[h]
     \centering
-    \includegraphics[width=1.0\linewidth]{STORM-AI Deliverable-1/Figures/Paper-Classification-Results.jpg}
+    \includegraphics[width=1.0\linewidth]{Figures/Paper-Classification-Results.jpg}
     \caption{\it Results of searching and classifying 54,628 AI papers: fewer than 17\% address AI Trustworthiness, Reliability, or Security; few or none of those address organizational or mission requirements. \textbf{Mission Assurance is completely neglected.}}
     \label{fig:heatmapAlt}
 \end{figure}
