--- a/skcformat.sty
+++ b/skcformat.sty
@@ -15,8 +15,8 @@
 % 1 inch = 25.4 mm
 % ---------------------------------------------------------------------
 
-\usepackage[letterpaper,width=6.5in,height=225truemm,top=32mm,
-              headheight=16pt,headsep=20pt,footskip=13mm]{geometry}
+% \usepackage[letterpaper,width=6.5in,height=225truemm,top=32mm,
+%               headheight=16pt,headsep=20pt,footskip=13mm]{geometry}
 % \usepackage[letterpaper,width=160truemm,height=225truemm,top=32mm,
 %               headheight=16pt,headsep=20pt,footskip=13mm]geometry}
 
