Use the geometry settings in skcformat.sty and comment out what is in Storm-AI-Deliverable-1.tex

--- a/Storm-AI-Deliverable-1.tex
+++ b/Storm-AI-Deliverable-1.tex
@@ -18,8 +18,8 @@
 \usepackage{textcomp}
 \usepackage{titlesec}
 
-% Page layout
-\usepackage[top=1.3in, bottom=1in, left=1in, right=1in, headheight=0.75in, headsep=0.25in]{geometry}
+% Page layout (use what's in skcformat.sty)
+% \usepackage[top=1.3in, bottom=1in, left=1in, right=1in, headheight=0.75in, headsep=0.25in]{geometry}
 
 % Graphics
 \usepackage{graphicx}
