used hyperref package without parameters to outline urls

--- a/Storm-AI-Deliverable-1.tex
+++ b/Storm-AI-Deliverable-1.tex
@@ -16,10 +16,14 @@
 % \usepackage[hyphens]{url}
 %\usepackage[numbers, sort&compress]{natbib}
 \usepackage[numbers]{natbib}
-% \usepackage{hyperref}
 \usepackage{xurl}
 
-\usepackage[colorlinks=true, linkcolor=black, urlcolor=black, citecolor=black]{hyperref}
+%% -------------------------------------
+%% hyperref without parameters outlines urls in teal boxes in bibliography
+%% -------------------------------------
+\usepackage{hyperref}
+% \usepackage[colorlinks=true, linkcolor=black, urlcolor=black, citecolor=black]{hyperref}
+
 \usepackage{enumitem}
 \usepackage{textcomp}
 \usepackage{titlesec}
